infra/k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ni-service
  namespace: ni
spec:
  type: NodePort
  selector:
    app: ni
  ports:
    - port: 8080
      targetPort: 8080
