infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ni-ingress
  namespace: ni
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ni-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: <public_subnets>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/v1*
        pathType: Prefix
        backend:
          service:
            name: ni-service
            port:
              number: 8080
      - path: /healthcheck
        pathType: Prefix
        backend:
          service:
            name: ni-service
            port:
              number: 8080
